--- a/build.yaml
+++ b/build.yaml
@@ -34,3 +34,8 @@ include:
     shield: hillside52_left
   - board: nice_nano_v2
     shield: hillside52_right
+
+  - board: nice_nano_v2
+    shield: corne_left nice_view_adapter nice_view
+  - board: nice_nano_v2
+    shield: corne_right nice_view_adapter nice_view
