--- a/build.yaml
+++ b/build.yaml
@@ -36,6 +36,6 @@ include:
     shield: hillside52_right
 
   - board: nice_nano_v2
-    shield: corne_left nice_view_adapter nice_view
+    shield: hillside52_left nice_view_adapter nice_view
   - board: nice_nano_v2
-    shield: corne_right nice_view_adapter nice_view
+    shield: hillside52_right nice_view_adapter nice_view
