--- a/config/hillside52.conf
+++ b/config/hillside52.conf
@@ -12,3 +12,6 @@
 
 # Boost the Bluetooth signal only if having connection issues
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+
+# Found this suggestion here: https://www.reddit.com/r/ErgoMechKeyboards/comments/1abjxqi/zmk_connectivity_between_halves_nicenano_v2/
+CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
